# vgmstream

./: CMakeLists.txt  Makefile  make-build-pages-demo.sh  make-build-wasm-min.sh  preview-pages-demo.sh  version-make.bat  version-make.sh  vgmstream_full.sln
.github/workflows/: cmake-lx.yml  cmake-mac.yml  cmake-wasm.yml  pages-demo.yml  vs-win.yml  wasm-min-manual.yml
cli/: CMakeLists.txt  Makefile  vgmstream_cli.c  vgmstream_cli.h  vgmstream_cli_utils.c  vgmstream_wasm_min_exports.c  vgmstream_wasm_min_smoke.c
cli/tests/: test_wasm_min_exports.ps1  test_wasm_min_samples.ps1
cmake/dependencies/: ffmpeg.cmake
docs/superpowers/plans/: 2026-03-30-wasm-min-lol-wem-vorbis.md  2026-03-31-wasm-pages-demo-and-docs.md
docs/superpowers/reports/: 2026-03-30-wasm-min-change-report.md
docs/superpowers/specs/: 2026-03-30-wasm-min-lol-wem-vorbis-design.md  2026-03-31-wasm-pages-demo-and-docs-design.md
src/: CMakeLists.txt  vgmstream_init.c  vgmstream_init_wasm_min.c  vgmstream_wasm_min.c  vgmstream_wasm_min.h  vgmstream_wasm_min_runtime.c  vgmstream_wasm_min_runtime.h
src/base/: codec_info.c  codec_info_wasm_min.c  info.c
src/layout/: blocked.c
src/meta/: wwise.c
web/pages/: index.html
web/pages/assets/: app.css  app.mjs  i18n.mjs  player-controller.mjs  vgmstream-runtime.mjs
web/pages/docs/: react.html  vue.html  web.html
web/tests/: player-controller.test.mjs  test_pages_demo_site.ps1  test_pages_workflows.ps1  vgmstream-runtime.test.mjs
